# ethereum-haskell

./: .gitignore  .gitmodules  README.md  ethereum.cabal  etherium-haskell.cabal  stack.yaml
Ethereum/: Prelude.hs  RLP.hs  Trie.hs
Ethereum/RLP/: Convert.hs
Etherium/: Block.hs  Patricia.hs  Prelude.hs  RLP.hs  Trie.hs  Wire.hs
Etherium/RLP/: Convert.hs
Etherium/Trie/: Internal.hs  MapDB.hs  Path.hs
exec/: Main.hs
src/Ethereum/: Block.hs  Prelude.hs  RLP.hs  Wire.hs
src/Ethereum/RLP/: Convert.hs  Item.hs
src/Ethereum/Trie/: Internal.hs  MapDB.hs  Path.hs
test/Ethereum/: PreludeSpec.hs  RLPSpec.hs  Testing.hs  TrieSpec.hs  WireSpec.hs
test/Ethereum/Trie/: PathSpec.hs
test/Etherium/: PatriciaSpec.hs  QuickCheck.hs  RLPSpec.hs  Testing.hs  TrieSpec.hs
test/Etherium/Trie/: PathSpec.hs
