-- The name of the package.
name:                etherium-haskell

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            Etherium in Haskell

-- A longer description of the package.
-- description:         

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Ben Kirwin

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          ben@kirw.in

-- A copyright notice.
copyright:           (c) 2014 Ben Kirwin

category:            Network

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10

test-suite test
  type: exitcode-stdio-1.0 
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: base, Cabal >= 1.8
               , hspec
               , etherium-haskell
               , bytestring
               , containers
               , mtl
               , QuickCheck
               , text
               , unordered-containers
               , aeson


library
  -- Modules exported by the library.
  exposed-modules: Etherium.Block
                 , Etherium.Prelude
                 , Etherium.RLP
                 , Etherium.RLP.Convert   
                 , Etherium.Trie
                 , Etherium.Trie.Internal
                 , Etherium.Trie.MapDB
                 , Etherium.Trie.Path
                 , Etherium.Wire
  
  -- Modules included in this library but not exported.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- Other library packages from which modules are imported.
  build-depends:       base
                     , bytestring
                     , containers
                     , attoparsec
                     , cryptohash
                     , mtl
                     , errors
        
        -- Directories containing source files.
  -- hs-source-dirs:      
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  
